Fix trips collapsing in small screens [f:1h]

--- a/src/components/TripsTimeline/DestinationItem.css
+++ b/src/components/TripsTimeline/DestinationItem.css
@@ -2,7 +2,6 @@
 
 .destination-item {
   display: inline-block;
-  white-space: normal;
   width: 16rem;
 
   & .ring-wrapper {
