--- a/src/components/TripsTimeline/TripsTimeline.css
+++ b/src/components/TripsTimeline/TripsTimeline.css
@@ -5,12 +5,13 @@
     list-style: none;
     margin: 0;
     mask-image: linear-gradient(to right, #000 0%, #000 90%, rgba(0, 0, 0, 0) 100%);
-    overflow-x: scroll;
+    overflow-x: auto;
     padding: 0;
     white-space: nowrap;
 
     & .trip-item {
       display: inline-block;
+      white-space: normal;
 
       & + .trip-item {
         margin-left: 1.5rem;
